zmiana struktury katalogow

--- a/3-zaawansowany-this/2-zadania/index.html
+++ b/3-zaawansowany-this/2-zadania/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kurs JS - zadania obiekty</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <button id="button1">Wypisz w konsoli duże</button>
