--- a/1-obiekty/2-zadania/index.html
+++ b/1-obiekty/2-zadania/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kurs JS - obiekty</title>
-    <script src="app.js"></script>
+    <script src="js/exercise01.js"></script>
+    <script src="js/exercise02.js"></script>
+    <script src="js/exercise03.js"></script>
 </head>
 <body>
 
