--- a/1-obiekty/7-zadania/index.html
+++ b/1-obiekty/7-zadania/index.html
@@ -5,7 +5,7 @@
         <title></title>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
 
