--- a/2-konstruktor/1-zadania/index.html
+++ b/2-konstruktor/1-zadania/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kurs JS - zadania obiekty</title>
-    <script src="js/app.js"></script>
+    <script src="js/exercise01.js"></script>
+    <script src="js/exercise02.js"></script>
+    <script src="js/exercise03.js"></script>
+    <script src="js/exercise04.js"></script>
+    <script src="js/exercise05.js"></script>
 </head>
 <body>
 
