dodanie pliku zadania3 do 3-zaawansowany-this/1-zadania

--- a/3-zaawansowany-this/1-zadania/index.html
+++ b/3-zaawansowany-this/1-zadania/index.html
@@ -7,6 +7,7 @@
     <title>Kurs JS - zadania obiekty</title>
     <script src="js/exercise01.js" defer></script>
     <script src="js/exercise02.js" defer></script>
+    <script src="js/exercise03.js" defer></script>
 </head>
 <body>
 
